<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="select_prompt">Select</string>
    <string name="poweredby">Powered By:</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="degree">Degree</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="about">ABOUT</string>
    <string name="select_state">Select...</string>
    <string name="logo_msg">Powered by:</string>
    <string name="Aeris_ID">J7FYBjpcjleHBhcZpy6Vo</string>
    <string name="Secret">8vWdn9GJcv9UEWTAQxxA8dcLIdoRwVgewEmF6Xt5</string>
    <string-array name="states">
        <item>Select...</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="title_activity_about_me">aboutMe</string>
    <string name="title_activity_result_page">ResultPage</string>
    <string name="res_map">VIEW MAP</string>
    <string name="res_det">MORE DETAILS</string>
    <string name="fbShare">facebookShare</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map_fragment">MapFragment</string>
</resources>
