<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anamikarani.myweatherapp.ResultPage"
    tools:showIn="@layout/activity_result_page"
    android:weightSum="1"
    android:nestedScrollingEnabled="false">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_det"
        android:id="@+id/button4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_map"
        android:id="@+id/button5"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3" />

    <ImageButton
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:id="@+id/imageButton"
        android:src="@drawable/fb_icon"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#454995"
        android:clickable="true"
        android:contentDescription="@string/fbShare"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView11"
        android:textColor="#989898"
        android:layout_marginTop="88dp"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:layout_below="@+id/button5" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView3"
        android:layout_above="@+id/textView10"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView10"
        android:textAlignment="center"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView12"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView10"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:textColor="#8e8e8e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:textAlignment="center"
        android:textColor="#8e8e8e"
        android:layout_alignRight="@+id/imageButton"
        android:layout_alignEnd="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="6dp"
        android:paddingTop="4dp"
        android:layout_marginTop="51dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Precipitation"
                android:id="@+id/textView14"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView22"
                android:layout_column="11"
                android:textColor="#8e8e8e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Chance of rain"
                android:id="@+id/textView15"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView23"
                android:layout_column="11"
                android:textColor="#8e8e8e" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Wind Speed"
                android:id="@+id/textView16"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView24"
                android:layout_column="11"
                android:textColor="#8e8e8e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Dew Point"
                android:id="@+id/textView17"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView25"
                android:layout_column="11"
                android:textColor="#8e8e8e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Humidity"
                android:id="@+id/textView18"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView26"
                android:layout_column="11"
                android:textColor="#8e8e8e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Visibility"
                android:id="@+id/textView19"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView27"
                android:layout_column="11"
                android:textColor="#8e8e8e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Sunrise"
                android:id="@+id/textView20"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView28"
                android:layout_column="11"
                android:textColor="#8e8e8e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Sunset"
                android:id="@+id/textView21"
                android:layout_column="0"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textColor="#8e8e8e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView29"
                android:layout_column="11"
                android:textColor="#8e8e8e" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
</ScrollView>